--- a/Lights/index.html
+++ b/Lights/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>WebGL Basics</title>
+		<title>WebGL Lights</title>
 		<style>
         html, body {
             margin: 0;
@@ -14,6 +14,14 @@
         display: block;
         }
 		</style>
+        <script type="importmap">
+            {
+              "imports": {
+                "three": "https://cdn.jsdelivr.net/npm/three@0.173.0/build/three.module.js",
+                "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.173.0/examples/jsm/"
+              }
+            }
+          </script>
 	</head>
 	<body>
         <canvas id="c"></canvas>
