--- a/Lights/index.html
+++ b/Lights/index.html
@@ -25,6 +25,6 @@
 	</head>
 	<body>
         <canvas id="c"></canvas>
-		<script type="module" src="/main.js"></script>
+		<script type="module" src="lights.js"></script>
 	</body>
 </html>
